--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://baay22.github.io/Buy-Zopiclone-11/">https://baay22.github.io/Buy-Zopiclone-11/</a><br>
+                <a target="_bLank" href="https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Buy+Zopiclone/Buy+Zopiclone-11/index.html">https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Buy+Zopiclone/Buy+Zopiclone-11/index.html</a><br>
+                <a target="_bLank" href="https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Buy+Zopiclone/Buy+Zopiclone-11/index.html">https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Buy+Zopiclone/Buy+Zopiclone-11/index.html</a><br>
+                <a target="_bLank" href="https://superb-rugelach-f6d3b5.netlify.app">https://superb-rugelach-f6d3b5.netlify.app</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
